# advent-2021

./: .gitignore  Cargo.toml  flake.nix  shell.nix
.aocf/cache/: aoc2020_01.json  aoc2020_05.json  aoc2021_01.json  aoc2021_02.json  aoc2021_03.json  aoc2021_04.json  aoc2021_05.json  aoc2021_06.json  aoc2021_07.json  aoc2021_08.json  aoc2021_09.json  aoc2021_10.json
.github/workflows/: build_nix.yml
src/: lib.rs
