[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = {git = "https://github.com/tocklime/aoc-rs" ,rev="1908fdba3872d6ec8cf9a9cf44f6f47a90e95287"}
aoc_harness_macros = {git = "https://github.com/tocklime/aoc-rs", rev="1908fdba3872d6ec8cf9a9cf44f6f47a90e95287"}
#aoc_harness = {git = "https://github.com/tocklime/aoc-rs", rev="1908fdba3872d6ec8cf9a9cf44f6f47a90e95287"}
aoc_harness = {git = "https://github.com/tomberek/aoc-rs", rev="797c3259877dadc60ab5981b303140908881da08"}
#aoc_harness = {path = "/home/tom/aoc/aoc-rs/aoc_harness"}
sscanf = "0.1.3"
structopt = "0.3"
aocf = "0.1.13"
itertools = "0.10.1"
time = "0.3.5"
rayon = "1.5.1"
typenum = "1.14.0"
ndarray = "0.15.4"
packed_simd = { package = "packed_simd_2", git = "https://github.com/rust-lang/packed_simd", rev ="b47552659401299a2023e7f408316bfe2dd4476d"}
seq-macro = "0.2.0"
text_io = "0.1.9"
slice-deque = "0.3.0"
