[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_harness = { git = "https://github.com/tocklime/aoc-rs" }
sscanf = "0.1.3"
structopt = "0.3"
itertools = "0.10.1"
time = "0.3.5"
rayon = "1.5.1"
typenum = "1.14.0"
ndarray = { version = "0.15.4", features = ["rayon"]}
packed_simd = { package = "packed_simd_2", git = "https://github.com/rust-lang/packed_simd", rev ="b47552659401299a2023e7f408316bfe2dd4476d"}
seq-macro = "0.2.0"
text_io = "0.1.9"
slice-deque = "0.3.0"
dotenv = "0.15.0"
nohash-hasher = "0.2.0"
